# ruby-opencv

./: .gitignore  Gemfile  License.txt  Rakefile  notes.txt  ruby-opencv.gemspec
ext/: CMakeLists.txt  CMakePresets.json  build.ninja  ruby_opencv-rb.cpp  ruby_opencv_version.hpp
ext/opencv/: CMakeLists.txt  CMakePresets.json  cvmat.cpp  ruby_opencv-rb.cpp  ruby_opencv-rb.hpp  ruby_opencv.def
ext/opencv/opencv2/: CMakeLists.txt  aruco-rb.cpp  aruco-rb.hpp  bgsegm-rb.cpp  bgsegm-rb.hpp  bioinspired-rb.cpp  bioinspired-rb.hpp  calib3d-rb.cpp  calib3d-rb.hpp  ccalib-rb.cpp  ccalib-rb.hpp  core-rb.cpp  core-rb.hpp  core_detect-rb.cpp  core_detect-rb.hpp  cudaarithm-rb.cpp  cudaarithm-rb.hpp  cudabgsegm-rb.cpp  cudabgsegm-rb.hpp  cudacodec-rb.cpp  cudacodec-rb.hpp  cudafeatures2d-rb.cpp  cudafeatures2d-rb.hpp  cudafilters-rb.cpp  cudafilters-rb.hpp  cudaimgproc-rb.cpp  cudaimgproc-rb.hpp  cudalegacy-rb.cpp  cudalegacy-rb.hpp  cudaobjdetect-rb.cpp  cudaobjdetect-rb.hpp  cudaoptflow-rb.cpp  cudaoptflow-rb.hpp  cudastereo-rb.cpp  cudastereo-rb.hpp  cudawarping-rb.cpp  cudawarping-rb.hpp  cudev-rb.cpp  cudev-rb.hpp  dnn-rb.cpp  (+77 more)
ext/opencv/opencv2/aruco/: CMakeLists.txt  aruco_calib-rb.cpp  aruco_calib-rb.hpp  charuco-rb.cpp  charuco-rb.hpp
ext/opencv/opencv2/bioinspired/: CMakeLists.txt  bioinspired-rb.cpp  retina-rb.cpp  retina-rb.hpp  retinafasttonemapping-rb.cpp  retinafasttonemapping-rb.hpp  transientareassegmentationmodule-rb.cpp  transientareassegmentationmodule-rb.hpp
ext/opencv/opencv2/calib3d/: CMakeLists.txt  calib3d-rb.cpp
ext/opencv/opencv2/ccalib/: CMakeLists.txt  multicalib-rb.cpp  multicalib-rb.hpp  omnidir-rb.cpp  omnidir-rb.hpp  randpattern-rb.cpp  randpattern-rb.hpp
ext/opencv/opencv2/core/: CMakeLists.txt  affine-rb.cpp  affine-rb.hpp  async-rb.cpp  async-rb.hpp  base-rb.cpp  base-rb.hpp  bindings_utils-rb.cpp  bindings_utils-rb.hpp  bufferpool-rb.cpp  bufferpool-rb.hpp  check-rb.cpp  check-rb.hpp  core-rb.cpp  core-rb.hpp  cuda-rb.cpp  cuda-rb.hpp  cuda_stream_accessor-rb.cpp  cuda_stream_accessor-rb.hpp  cuda_types-rb.cpp  cuda_types-rb.hpp  cvdef-rb.hpp  cvstd-rb.cpp  cvstd-rb.hpp  cvstd_wrapper-rb.cpp  cvstd_wrapper-rb.hpp  directx-rb.cpp  directx-rb.hpp  dualquaternion-rb.cpp  dualquaternion-rb.hpp  eigen-rb.cpp  eigen-rb.hpp  fast_math-rb.cpp  fast_math-rb.hpp  mat-rb.cpp  mat-rb.hpp  matx-rb.cpp  matx-rb.hpp  neon_utils-rb.cpp  neon_utils-rb.hpp  (+36 more)
ext/opencv/opencv2/cudev/: CMakeLists.txt  common-rb.cpp  common-rb.hpp
ext/opencv/opencv2/datasets/: CMakeLists.txt  ar_hmdb-rb.cpp  ar_hmdb-rb.hpp  ar_sports-rb.cpp  ar_sports-rb.hpp  dataset-rb.cpp  dataset-rb.hpp  fr_adience-rb.cpp  fr_adience-rb.hpp  fr_lfw-rb.cpp  fr_lfw-rb.hpp  gr_chalearn-rb.cpp  gr_chalearn-rb.hpp  gr_skig-rb.cpp  gr_skig-rb.hpp  hpe_humaneva-rb.cpp  hpe_humaneva-rb.hpp  hpe_parse-rb.cpp  hpe_parse-rb.hpp  ir_affine-rb.cpp  ir_affine-rb.hpp  ir_robot-rb.cpp  ir_robot-rb.hpp  is_bsds-rb.cpp  is_bsds-rb.hpp  is_weizmann-rb.cpp  is_weizmann-rb.hpp  msm_epfl-rb.cpp  msm_epfl-rb.hpp  msm_middlebury-rb.cpp  msm_middlebury-rb.hpp  or_imagenet-rb.cpp  or_imagenet-rb.hpp  or_mnist-rb.cpp  or_mnist-rb.hpp  or_pascal-rb.cpp  or_pascal-rb.hpp  or_sun-rb.cpp  or_sun-rb.hpp  pd_caltech-rb.cpp  (+25 more)
ext/opencv/opencv2/dnn/: CMakeLists.txt  all_layers-rb.cpp  all_layers-rb.hpp  dict-rb.cpp  dict-rb.hpp  dnn-rb.cpp  dnn-rb.hpp  layer-rb.cpp  layer-rb.hpp  layer.details-rb.cpp  layer.details-rb.hpp  shape_utils-rb.cpp  shape_utils-rb.hpp  version-rb.cpp  version-rb.hpp
ext/opencv/opencv2/face/: CMakeLists.txt  (+18 more)
ext/opencv2/: CMakeLists.txt  calib3d-rb.cpp  calib3d-rb.hpp  core-rb.cpp  core-rb.hpp  dnn-rb.cpp  features2d-rb.cpp  features2d-rb.hpp  flann-rb.cpp  flann-rb.hpp  highgui-rb.cpp  imgcodecs-rb.cpp  imgcodecs-rb.hpp  imgproc-rb.cpp  imgproc-rb.hpp  ml-rb.cpp  ml-rb.hpp  objdetect-rb.cpp  opencv_modules-rb.cpp  photo-rb.cpp  stitching-rb.cpp  stitching-rb.hpp  videoio-rb.cpp
ext/opencv2/core/: CMakeLists.txt  affine-rb.cpp  affine-rb.hpp  async-rb.cpp  async-rb.hpp  base-rb.cpp  bindings_utils-rb.cpp  bufferpool-rb.cpp  bufferpool-rb.hpp  check-rb.cpp  check-rb.hpp  cuda-rb.cpp  cuda_stream_accessor-rb.cpp  cuda_stream_accessor-rb.hpp  cuda_types-rb.cpp  cuda_types-rb.hpp  cvdef-rb.cpp  cvstd-rb.cpp  cvstd-rb.hpp  cvstd_wrapper-rb.cpp  cvstd_wrapper-rb.hpp  directx-rb.cpp  directx-rb.hpp  dualquaternion-rb.cpp  eigen-rb.cpp  eigen-rb.hpp  fast_math-rb.cpp  mat-rb.cpp  mat-rb.hpp  matx-rb.cpp  matx-rb.hpp  neon_utils-rb.cpp  ocl-rb.cpp  ocl-rb.hpp  ocl_genbase-rb.cpp  opengl-rb.cpp  opengl-rb.hpp  operations-rb.hpp  optim-rb.cpp  ovx-rb.hpp  (+18 more)
ext/opencv2/dnn/: CMakeLists.txt  all_layers-rb.cpp  all_layers-rb.hpp  dict-rb.cpp  dnn-rb.cpp  layer-rb.cpp  layer.details-rb.cpp  layer.details-rb.hpp  shape_utils-rb.cpp  shape_utils-rb.hpp
ext/opencv2/flann/: CMakeLists.txt  all_indices-rb.cpp  all_indices-rb.hpp  allocator-rb.hpp  any-rb.cpp  any-rb.hpp  autotuned_index-rb.cpp  autotuned_index-rb.hpp  composite_index-rb.cpp  config-rb.cpp  config-rb.hpp  defines-rb.cpp  dist-rb.cpp  dist-rb.hpp  dynamic_bitset-rb.cpp  dynamic_bitset-rb.hpp  flann_base-rb.cpp  flann_base-rb.hpp  general-rb.cpp  general-rb.hpp  ground_truth-rb.cpp  ground_truth-rb.hpp  hdf5-rb.hpp  heap-rb.cpp  heap-rb.hpp  hierarchical_clustering_index-rb.cpp  index_testing-rb.cpp  kdtree_index-rb.cpp  kdtree_index-rb.hpp  kdtree_single_index-rb.cpp  kmeans_index-rb.cpp  kmeans_index-rb.hpp  linear_index-rb.cpp  linear_index-rb.hpp  logger-rb.cpp  logger-rb.hpp  lsh_index-rb.cpp  lsh_index-rb.hpp  lsh_table-rb.cpp  lsh_table-rb.hpp  (+18 more)
ext/opencv2/objdetect/: CMakeLists.txt  aruco_board-rb.cpp  aruco_board-rb.hpp  aruco_detector-rb.cpp  aruco_detector-rb.hpp  aruco_dictionary-rb.cpp  barcode-rb.cpp  barcode-rb.hpp  charuco_detector-rb.cpp  charuco_detector-rb.hpp  detection_based_tracker-rb.cpp  face-rb.cpp  graphical_code_detector-rb.cpp  graphical_code_detector-rb.hpp
ext/opencv2/stitching/: warpers-rb.cpp  warpers-rb.hpp
ext/opencv2/video/: CMakeLists.txt  background_segm-rb.cpp  tracking-rb.cpp  tracking-rb.hpp  video-rb.cpp
(+890 files in other folders)
